--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="error_title">Oops sorry</string>
     <string name="error_message">There was an error, please try again</string>
     <string name="error_ok_button">OK</string>
+
+    <string name="facebook_app_id">600776573433079</string>
 </resources>
