--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">SunnyRainy</string>
+    <string name="app_name2">S U N N Y R A I N Y</string>
     <string name="action_settings">Settings</string>
+
+    <string name="favor_songs">Favorite Songs</string>
+    <string name="logout">Log out</string>
+
     <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -10,5 +15,7 @@
     <string name="error_message">There was an error, please try again</string>
     <string name="error_ok_button">OK</string>
 
-    <string name="facebook_app_id">600776573433079</string>
+    <string name="api_host">http://54.174.86.88/api/</string>
+
+    <string name="facebook_app_id">1773080712966807</string>
 </resources>
