--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,6 @@
     <string name="favor_songs">Favorite Songs</string>
     <string name="logout">Log out</string>
 
-    <string name="section_format">Hello World from section: %1$d</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="error_title">Oops sorry</string>
     <string name="error_message">There was an error, please try again</string>
     <string name="error_ok_button">OK</string>
@@ -18,4 +13,7 @@
     <string name="api_host">http://54.174.86.88/api/</string>
 
     <string name="facebook_app_id">1773080712966807</string>
+
+    <string name="spotify_client_id">be36ff5a78084c0c8c8af109cdbb284a</string>
+    <string name="spotify_redirect_uri">sunny-rainy-app-login://callback</string>
 </resources>
