--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="favor_songs">Favorite Songs</string>
+    <string name="create_host">Create a Host</string>
     <string name="logout">Log out</string>
 
     <string name="section_format">Hello World from section: %1$d</string>
